style(ProjectLinks): fix vertical alignment of link content

--- a/src/components/Home/ProjectsSection/FeaturedProjects/FeaturedProject/ProjectLinks/ProjectLinks.module.scss
+++ b/src/components/Home/ProjectsSection/FeaturedProjects/FeaturedProject/ProjectLinks/ProjectLinks.module.scss
@@ -26,6 +26,7 @@
 .projectLinks a {
   -webkit-tap-highlight-color: transparent;
   display: flex;
+  align-items: center;
   gap: 8px;
   color: #ccd6f6;
   font-size: 1rem;
